<resources>
    <string name="app_name">Playlist maker</string>
    <string name="poisk">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="call_support">Написать в поддержку</string>
    <string name="user_soglashenie">Пользовательское соглашение</string>
    <string name="shareLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="shareApp">Поделиться</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="supportMessageText">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMessageSubject">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">egor.football11@yandex.ru</string>
    <string name="mailto">mailto:</string>
    <string name="textPlain">text/plain</string>
    <string name="search">Поиск</string>
    <string name="nothingFound">Ничего не нашлось</string>
    <string name="internetProblem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reset">Обновить</string>
    <string name="youSearched">Вы искали</string>
    <string name="deleteHistory">Очистить историю</string>
    <string name="songLength">Длительность</string>
    <string name="songAlbum">Альбом</string>
    <string name="songYear">Год</string>
    <string name="songGenre">Жанр</string>
    <string name="songCountry">Страна</string>
    <string name="songZero">00:00</string>
    <string name="likedTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="mediatekaIsEmpty">Ваша медиатека пуста</string>
    <string name="noPlaylists">Вы не создали\nни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="playlistName">Название*</string>
    <string name="playlistDescription">Описание</string>
    <string name="create">Создать</string>
    <string name="finishPlaylistCreating">Завершить создание плейлиста?</string>
    <string name="dataWillLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="no_tracks_in_playlist_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
</resources>