<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding4"
        android:layout_marginTop="@dimen/padding4"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="@dimen/padding4"
        android:paddingStart="@dimen/padding12"
        android:paddingTop="10dp"
        android:paddingBottom="@dimen/padding12"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_view_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/padding16"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/padding16"
        android:orientation="vertical">

        <Button
            android:id="@+id/poisk_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/poisk"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/main_view_size"
            app:cornerRadius="@dimen/padding16"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/mediateka_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding16"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mediateka"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/main_view_size"
            app:cornerRadius="@dimen/padding16"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding16"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/main_view_size"
            app:cornerRadius="@dimen/padding16"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>
