<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding4"
        android:paddingTop="@dimen/padding4"
        android:paddingEnd="52dp"
        android:paddingBottom="@dimen/padding4">

        <Button
            android:id="@+id/settingsBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:padding="@dimen/padding12"
            app:icon="@drawable/back"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingStart="@dimen/padding12"
            android:paddingTop="10dp"
            android:paddingEnd="86dp"
            android:paddingBottom="@dimen/padding12"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_view_size" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingVertical="11dp"
        android:paddingStart="@dimen/padding16"
        android:paddingEnd="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:backgroundTint="@color/gray"
            android:paddingVertical="11dp"
            android:paddingStart="9dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/margin_vertical_settings"
        android:paddingStart="@dimen/padding16"
        android:paddingEnd="@dimen/padding12">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:backgroundTint="@color/white"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_size"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/share"
            app:icon="@drawable/share"
            app:iconTint="@color/gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/margin_vertical_settings"
        android:paddingStart="@dimen/padding16"
        android:paddingEnd="@dimen/padding12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:backgroundTint="@color/white"
            android:text="@string/call_support"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_size"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/support"
            app:icon="@drawable/share"
            app:iconTint="@color/gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/margin_vertical_settings"
        android:paddingStart="@dimen/padding16"
        android:paddingEnd="@dimen/padding12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:backgroundTint="@color/white"
            android:text="@string/user_soglashenie"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_size"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/user_agreement"
            app:icon="@drawable/share"
            app:iconTint="@color/gray" />

    </FrameLayout>
</LinearLayout>