<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsBackgroundColorStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backFromTrackInfo"
        style="@style/BackButtonSettingsStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/padding4"
        android:layout_marginTop="@dimen/padding4"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftLine24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightLine24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size24" />

    <ImageView
        android:id="@+id/mainTrackInfoImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/support"
        app:layout_constraintBottom_toTopOf="@id/horizGuideline"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@id/rightLine24"
        app:layout_constraintStart_toStartOf="@id/leftLine24"
        app:layout_constraintTop_toBottomOf="@id/backFromTrackInfo"


        />

    <TextView
        android:id="@+id/songNameTrackInfo"
        style="@style/SongNameTrackInfo"
        android:layout_marginTop="@dimen/size24"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/rightLine24"
        app:layout_constraintStart_toEndOf="@id/leftLine24"
        app:layout_constraintTop_toBottomOf="@id/mainTrackInfoImage"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/authorNameTrackInfo"
        style="@style/SongAuthorNameTrackInfo"
        android:layout_marginTop="@dimen/padding12"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/rightLine24"
        app:layout_constraintStart_toEndOf="@id/leftLine24"
        app:layout_constraintTop_toBottomOf="@id/songNameTrackInfo"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/addToFavorTrackInfo"
        style="@style/AddToFavorStyle"
        android:layout_marginTop="@dimen/size54"
        android:src="@drawable/plus_mediateka"
        app:layout_constraintEnd_toStartOf="@id/playButtonTrackInfo"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftLine24"
        app:layout_constraintTop_toBottomOf="@id/authorNameTrackInfo" />

    <ImageButton
        android:id="@+id/playButtonTrackInfo"
        style="@style/PlayButtonStyle"
        android:layout_marginTop="30dp"
        android:src="@drawable/play_song_button_mediateka"
        app:layout_constraintEnd_toStartOf="@id/likeSongTrackInfo"
        app:layout_constraintStart_toEndOf="@id/addToFavorTrackInfo"
        app:layout_constraintTop_toBottomOf="@id/authorNameTrackInfo" />

    <ImageButton
        android:id="@+id/likeSongTrackInfo"
        style="@style/AddToFavorStyle"
        android:src="@drawable/like_mediateka"
        app:layout_constraintBottom_toBottomOf="@id/addToFavorTrackInfo"
        app:layout_constraintEnd_toStartOf="@id/rightLine24"
        app:layout_constraintStart_toEndOf="@id/playButtonTrackInfo" />

    <TextView
        android:id="@+id/songCurrentTimeTrackInfo"
        style="@style/SongTimeTrackInfo"
        app:layout_constraintEnd_toEndOf="@id/playButtonTrackInfo"
        app:layout_constraintStart_toStartOf="@id/playButtonTrackInfo"
        app:layout_constraintTop_toBottomOf="@id/playButtonTrackInfo"
        android:visibility="visible"
        android:text="@string/songZero" />

    <TextView
        android:id="@+id/songLengthTitleTrackInfo"
        style="@style/TitleTrackInfo"
        android:layout_marginTop="@dimen/size38dp"
        android:text="@string/songLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songCurrentTimeTrackInfo" />

    <TextView
        android:id="@+id/songLengthTrackInfo"
        style="@style/TitleTrackInfoValue"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songCurrentTimeTrackInfo"
        tools:text="5:35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="438dp" />

    <TextView
        android:id="@+id/songAlbumTitleTrackInfo"
        style="@style/TitleTrackInfo"
        android:text="@string/songAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songLengthTitleTrackInfo" />

    <TextView
        android:id="@+id/songAlbumTrackInfo"
        style="@style/TitleTrackInfoValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songLengthTrackInfo"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/songYearTitleTrackInfo"
        style="@style/TitleTrackInfo"
        android:text="@string/songYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songAlbumTitleTrackInfo" />

    <TextView
        android:id="@+id/songYearTrackInfo"
        style="@style/TitleTrackInfoValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songAlbumTrackInfo"
        tools:text="1969" />

    <TextView
        android:id="@+id/songGenreTitleTrackInfo"
        style="@style/TitleTrackInfo"
        android:text="@string/songGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songYearTitleTrackInfo" />

    <TextView
        android:id="@+id/songGenreTrackInfo"
        style="@style/TitleTrackInfoValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songYearTrackInfo"
        tools:text="Rock" />

    <TextView
        android:id="@+id/songCountryTitleTrackInfo"
        style="@style/TitleTrackInfo"
        android:layout_marginBottom="@dimen/size28dp"
        android:text="@string/songCountry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songGenreTitleTrackInfo" />

    <TextView
        android:id="@+id/songCountryTrackInfo"
        style="@style/TitleTrackInfoValue"
        android:layout_marginBottom="@dimen/size28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songGenreTrackInfo"
        tools:text="Великобритания" />


</androidx.constraintlayout.widget.ConstraintLayout>