<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/SettingsBackgroundColorStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mediateka.ui.FragmentCreatePlaylist">

        <ImageView
            android:id="@+id/backFromCreatePlaylist"
            style="@style/BackButtonSettingsStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/padding4"
            android:layout_marginTop="@dimen/padding4"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/title"
            style="@style/MainTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding4"
            android:paddingStart="@dimen/padding12"
            android:paddingTop="10dp"
            android:paddingEnd="84dp"
            android:paddingBottom="@dimen/padding12"
            android:text="@string/newPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backFromCreatePlaylist"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/addPlaylistImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/size24"
            android:layout_marginTop="@dimen/size24"
            android:background="@drawable/rounded_gapped_rectangle"
            android:scaleType="centerInside"
            android:src="@drawable/playlist_placeholder"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backFromCreatePlaylist" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addPlaylistName"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding16"
            android:layout_marginTop="@dimen/size32"
            android:fitsSystemWindows="true"
            app:cursorColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@id/addPlaylistDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPlaylistImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNamePlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playlistName"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addPlaylistDescription"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding16"
            android:layout_marginTop="@dimen/padding16"
            android:fitsSystemWindows="true"
            app:cursorColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addPlaylistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescriptionPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playlistDescription"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createPlaylistButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding16"
            android:layout_marginBottom="@dimen/size32"
            android:background="@drawable/tap_button_selector"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>